# SimpleCPU

./: .gitignore  LICENSE  README.md
c/: .gitignore  Makefile  README.md  asm.c  asm.h  constants.h  cpu  cpu.c  cpu.h  dis.c  dis.h  driver  instruction.c  instruction.h  instructions.c  instructions.h  io.c  io.h  loader.c  loader.h  memory  memory.c  memory.h  microcode.c  microcode.h  object.c  object.h  program1.s  sample1.s  tst.c
docs/: README.md  program_a.s  program_b.s  project_1.docx  readme.txt
python/: .gitignore  README.md  pyproject.toml
python/cpusim/: __init__.py  __main__.py  constants.py  cpu.py  exceptions.py  instruction.py  loader.py  memory.py  objectfile.py  opcode.py
python/simplecpu/: __init__.py  __main__.py  constants.py  cpu.py  exceptions.py  instruction.py  memory.py  opcode.py
python/src/simplecpu/: __main__.py  cpu.py  instruction.py
python/tests/: program1.py  samples.py  test_assembler.py  test_cpu.py  test_cpu_program1.py  test_cpu_programs.py  test_cpu_sample_programs.py  test_instruction.py  test_memory.py  test_opcode.py
rust/: Cargo.toml  README.md
rust/src/: assembler.rs  constants.rs  cpu.rs  error.rs  main.rs  memory.rs  opcode.rs
zig/: .gitignore  README.md  build.zig
zig/src/: assembler.zig  constants.zig  cpu.zig  error.zig  main.zig  memory.zig  opcode.zig
