[tool.poetry]
name = "simplecpu"
version = "0.1.0"
description = ""
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
prun="simplecpu.__main__:loader"
pasm="simplecpu.__main__:asm"
pdis="simplecpu.__main__:dis"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
poethepoet = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
