[tool.poetry]
name = "simplecpu"
version = "0.1.0"
description = ""
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
simplecpu="simplecpu.__main__:cli"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
poethepoet = "^0.24.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
